Fixing header background gap on top

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -258,8 +258,7 @@ em {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	margin-block: 2rem;
-	height: 60px;
+	padding-block: 2rem;
 	z-index: 1000;
 }
 
@@ -300,7 +299,7 @@ em {
 .nav-links.show {
 	visibility: visible;
 	top: 80px;
-	opacity: 100%;
+	opacity: 1;
 }
 
 .nav-link {
@@ -739,7 +738,7 @@ em {
 		padding: 0;
 		margin-inline: auto;
 		background-color: transparent;
-		opacity: 100%;
+		opacity: 1;
 	}
 
 	.nav-links.mobile-collapsed {
